--- a/data_investigation/make_splits.ipynb
+++ b/data_investigation/make_splits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,12 @@
     "df_test_scaled = pd.DataFrame(scaler.transform(df_test), columns=df_test.columns, index=df_test.index)\n",
     "\n",
     "# # save datasets to disk\n",
-    "# torch.save(train_dfs, '../data/processed/train_dfs.pt')\n",
-    "# torch.save(val_dfs, '../data/processed/val_dfs.pt')\n",
-    "# torch.save(df_test_scaled, '../data/processed/test_df.pt')\n",
+    "torch.save(train_dfs, '../data/processed/train_dfs.pt')\n",
+    "torch.save(val_dfs, '../data/processed/val_dfs.pt')\n",
+    "torch.save(df_test_scaled, '../data/processed/test_df.pt')\n",
     "\n",
-    "# # save scalers to disk\n",
-    "# torch.save(scaler, '../data/processed/scaler_all.pt')"
+    "# save scalers to disk\n",
+    "torch.save(scaler, '../data/processed/scaler_all.pt')"
    ]
   },
   {
